position 'more-info' div content

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Good Food on Montford</title>
 	<link href="css/style.css" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div class="wrapper">
@@ -31,8 +32,12 @@
 			</ul>
 		</div>
 		<div class="more-info container">
+			<hr>
 			<div class="contact">
-				<p>1701 MONTFORD DRIVE | #GFOM | 704.525.0881</p>
+				<p>
+					<span class="address">1701 MONTFORD DRIVE | #GFOM |</span>
+					<span class="phone">704.525.0881</span>
+				</p>
 				<img src="img/reviews.jpg">
 			</div>
 			<div class="moffett-info">
