finish mobile layout

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<li><img src="img/Moffett.jpg"></li>
 					<li><img src="img/Barringtons.jpg"></li>
 				</ul>
-				<h2>A Master Class IN SEASONALLY DRIVEN CUISINE.</h2>
+				<h2>A <span class="text-image"><img src="img/master-class-text.jpg"></span> IN SEASONALLY DRIVEN CUISINE.</h2>
 				<p>MOFFETT RESTAURANT GROUP IS A COLLECTION OF RESTAURANTS OWNED BY AWARD-WINNING CHEF, BRUCE MOFFETT. MRG UNDERSTANDS THAT DINING OUT IS AS MUCH ABOUT THE EXPERIENCE AS IT IS ABOUT THE FOOD. WHILE ALL THREE MRG RESTAURANTS HAVE THEIR OWN STYLE, DECOR AND CUISINE, THEY SHARE ONE QUALITY: A COMFORTABLE SETTING PAIRED WITH INNOVATIVE, SEASONALLY-DRIVEN DISHES.</p>
 			</div>
 		</div>
